@@ -162,6 +162,13 @@ $ srun -n20 a.out
 library integrated with SLURM</li>
 <li>Set the environment variable <b>PMI_DEBUG</b> to a numeric value
 of 1 or higher for the PMI library to print debugging information</li>
+<li>Set the environment variable <b>SLURM_PMI_KVS_NO_DUP_KEYS</b> for
+improved performance with MPICH2 by eliminating a test for duplicate keys.</li>
+<li>The environment variables can be used to tune performance depending upon
+network performance: <b>PMI_FANOUT</b>, <b>PMI_FANOUT_OFF_HOST</b>, and
+<b>PMI_TIME</b>.
+See the srun man pages in the INPUT ENVIRONMENT VARIABLES section for a more
+information.</li>
 <li>Information about building MPICH2 for use with SLURM is described on the 
 <a href="http://wiki.mcs.anl.gov/mpich2/index.php/Frequently_Asked_Questions#Q:_How_do_I_use_MPICH2_with_slurm.3F">
 MPICH2 FAQ</a> web page</li>
