@@ -69,6 +69,7 @@ struct kvs_comm {
 	uint32_t	kvs_cnt;	/* count of key-pairs */
 	char **		kvs_keys;
 	char **		kvs_values;
+	uint16_t *	kvs_key_sent;
 };
 struct kvs_comm_set {
 
